--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/index.css">
+    <title>Productly</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navi">
+            <div class="logo"><img src="images/logo.png"></div>
+            <div class="logo"><img src="images/logo-name.png"></div>
+            <div class="box1">Products</div>
+            <div class="box1">Customers</div>
+            <div class="box1">Pricing</div>
+            <div class="box1">Resources</div>
+            <div><button class="in">Sign In</button></div>
+            <div><button class="up">Sign Up</button></div>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1 class="main-title">The Design Thinking superpowers</h1>
+            <p class="main-info">Tools, tutorials, design and innovation 
+                experts, all in one place! The most intuitive way to imagine 
+                your next user experience.</p>
+            <button class="main-btn">Get Started</button>
+            <button class="video"><img src="images/playbutton.png">Watch the Video</button>
+        </section>
+        <section>
+            <img src="images/play.png" alt="People playing">
+        </section>
+    </main>
 </body>
 </html>
