second section started

--- a/index.html
+++ b/index.html
@@ -34,5 +34,16 @@
             <img src="images/play.png" alt="People playing">
         </section>
     </main>
+    <h3>We design tools to unveil your superpowers</h3>
+    <container>
+        <div class="icons"><img src="images/click.png">First click test</div>
+        <div class="icons">While most people enjoy casino gambling,</div>
+        <div class="icons"><img src="images/design.png">Design surveys</div>
+        <div class="icons">Sports betting, lottery and bingo playing for the fun</div>
+        <div class="icons"><img src="images/heart.png">Preference tests</div>
+        <div class="icons">The Myspace page defines the individual.</div>
+        <div class="icons"><img src="images/time.png">Five second tests</div>
+        <div class="icons">Personal choices and the overall personality of the person. </div>
+    </container>
 </body>
 </html>
