second section complete

--- a/index.html
+++ b/index.html
@@ -35,15 +35,23 @@
         </section>
     </main>
     <h3>We design tools to unveil your superpowers</h3>
-    <container>
-        <div class="icons"><img src="images/click.png">First click test</div>
-        <div class="icons">While most people enjoy casino gambling,</div>
-        <div class="icons"><img src="images/design.png">Design surveys</div>
-        <div class="icons">Sports betting, lottery and bingo playing for the fun</div>
-        <div class="icons"><img src="images/heart.png">Preference tests</div>
-        <div class="icons">The Myspace page defines the individual.</div>
-        <div class="icons"><img src="images/time.png">Five second tests</div>
-        <div class="icons">Personal choices and the overall personality of the person. </div>
-    </container>
+    <section>
+        <div class="icons1"><img src="images/click.png">
+            <div class="h4">Click test</div>
+            <div class="dis">While most people enjoy casino gambling,</div>
+                 </div>
+        <div class="icons2"><img src="images/design.png">
+            <div class="h4">Design surveys</div>
+            <div class="dis">Sports betting, lottery and bingo playing for the fun</div>
+                </div>
+        <div class="icons3"><img src="images/heart.png">
+            <div class="h4">Preference tests</div>
+            <div class="dis">The Myspace page defines the individual.</div>
+                </div>
+        <div class="icons4"><img src="images/time.png">
+            <div class="h4">Five second tests</div>
+            <div class="dis">Personal choices and the overall personality of the person.</div>
+                </div>
+    </section>
 </body>
 </html>
