3rd and 4th section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,58 @@
             <div class="h4">Five second tests</div>
             <div class="dis">Personal choices and the overall personality of the person.</div>
                 </div>
+                <button class="btn-now">Sign up now</button>
     </section>
+    <section class="texting">
+        <div class="small-font-sub">Effortless Validation for</div>
+            <h4 class="title-3">Design Professionals</h4>
+                <p class="small-font">The Myspace page defines the individual, his or her characteristics,
+                    traits, personal choices and the overall personality of the person. </p>
+            <h7 class="sub-title">Accessory makers</h7>
+                <p class="small-font">While most people enjoy casino gambling, sports betting, lottery 
+                    and bingo playing for the fun</p>
+            <h7 class="sub-title">Alterationists</h7>
+                <p class="small-font">If you are looking for a new way to promote your business that won’t 
+                    cost you more money, </p>
+            <h7 class="sub-title">Custom Design designers</h7>
+                <p class="small-font">If you are looking for a new way to promote your business that won’t 
+                    cost you more money, </p>
+    </section>
+        <section class="texting">            
+            <img src="images/texting.png" alt="a person texting">
+        </section>
+    <section class="computing">
+        <img src="images/computing.png" alt="a person on the computer">
+    </section>
+    <section class="computing">
+        <div class="small-font-sub-2">Easier decision making for</div>
+        <h4 class="title-4">Product Managers</h4>
+            <p class="small-font-2">The Myspace page defines the individual, his or her characteristics,
+                 traits, personal choices and the overall personality of the person.  </p>
+                 <div class="small-font-2"><img src="images/checkmark.png">  Never worry about overpaying for your energy
+                         again. </div>
+                 <div class="small-font-2"><img src="images/checkmark.png">  We will only switch you to energy companies that we trust 
+                        and will treat you right</div>
+                 <div class="small-font-2"><img src="images/checkmark.png">  We track the markets daily and know where the 
+                        savings are.</div>
+    </section>
+    <section class="pointing">
+        <div class="small-font-sub-3">Optimisation for</div>
+            <h4 class="title-4">Marketers</h4>
+                <p class="small-font-3">Few would argue that, despite the advancements of feminism over the past three decades, 
+                    women still face a double standard when it comes to their behavior.  </p>
+            <h7 class="sub-title-3"><b>Accessory makers</b></h7>
+                <p class="small-font-3">While most people enjoy casino gambling, sports betting, lottery 
+                    and bingo playing for the fun</p>
+            <h7 class="sub-title-3"><b>Alterationists</b></h7>
+                <p class="small-font-3">If you are looking for a new way to promote your business that won’t 
+                    cost you more money, </p>
+            <h7 class="sub-title-3"><b>Custom Design designers</b></h7>
+                <p class="small-font-3">If you are looking for a new way to promote your business that won’t 
+                    cost you more money, </p>
+    </section>
+        <section class="pointing">            
+            <img src="images/pointing.png" alt="a person pointing">
+        </section>
 </body>
 </html>
