--- a/index.html
+++ b/index.html
@@ -101,9 +101,31 @@
             <h7 class="sub-title-3"><b>Custom Design designers</b></h7>
                 <p class="small-font-3">If you are looking for a new way to promote your business that won’t 
                     cost you more money, </p>
-    </section>
+        </section>
         <section class="pointing">            
             <img src="images/pointing.png" alt="a person pointing">
         </section>
+<section class="footer">
+    <section class="logo-2">
+        <div><img src="images/logo.png"></div>
+        <div><img src="images/logo-name.png"></div>
+    </section>  
+    <section class="web-map">
+        <div>About Us</div>
+        <div>Blog</div>
+        <div>Contact</div>
+        <div>FAQ</div>
+    </section>  
+    <section class="web-map">
+        <div>Disclaimer</div>
+        <div>Financing</div>
+        <div>Privacy Policy</div>
+        <div>Terms of Service</div>
+    </section>
+    <section>
+        <div class="box"></div>
+        <button class="up-now-btn">Sign up Now</button>
+    </section>
+</section>
 </body>
 </html>
