--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
         </section>
         <section>
             <img src="images/play.png" alt="People playing">
-        </section>
-    </main>
-    <h3>We design tools to unveil your superpowers</h3>
+         </section>
+        <h3>We design tools to unveil your superpowers</h3>
     <section>
         <div class="icons1"><img src="images/click.png">
             <div class="h4">Click test</div>
@@ -51,27 +50,27 @@
         <div class="icons4"><img src="images/time.png">
             <div class="h4">Five second tests</div>
             <div class="dis">Personal choices and the overall personality of the person.</div>
-                </div>
-                <button class="btn-now">Sign up now</button>
+             </div>
+             <button class="btn-now">Sign up now</button>
     </section>
     <section class="texting">
         <div class="small-font-sub">Effortless Validation for</div>
             <h4 class="title-3">Design Professionals</h4>
                 <p class="small-font">The Myspace page defines the individual, his or her characteristics,
                     traits, personal choices and the overall personality of the person. </p>
-            <h7 class="sub-title">Accessory makers</h7>
+            <h6 class="sub-title">Accessory makers</h6>
                 <p class="small-font">While most people enjoy casino gambling, sports betting, lottery 
                     and bingo playing for the fun</p>
-            <h7 class="sub-title">Alterationists</h7>
+            <h6 class="sub-title">Alterationists</h6>
                 <p class="small-font">If you are looking for a new way to promote your business that won’t 
                     cost you more money, </p>
-            <h7 class="sub-title">Custom Design designers</h7>
+            <h6 class="sub-title">Custom Design designers</h6>
                 <p class="small-font">If you are looking for a new way to promote your business that won’t 
                     cost you more money, </p>
     </section>
-        <section class="texting">            
-            <img src="images/texting.png" alt="a person texting">
-        </section>
+            <section class="texting">            
+                <img src="images/texting.png" alt="a person texting">
+            </section>
     <section class="computing">
         <img src="images/computing.png" alt="a person on the computer">
     </section>
@@ -92,19 +91,21 @@
             <h4 class="title-4">Marketers</h4>
                 <p class="small-font-3">Few would argue that, despite the advancements of feminism over the past three decades, 
                     women still face a double standard when it comes to their behavior.  </p>
-            <h7 class="sub-title-3"><b>Accessory makers</b></h7>
+            <h6 class="sub-title-3">Accessory makers</h6>
                 <p class="small-font-3">While most people enjoy casino gambling, sports betting, lottery 
                     and bingo playing for the fun</p>
-            <h7 class="sub-title-3"><b>Alterationists</b></h7>
+            <h6 class="sub-title-3">Alterationists</h6>
                 <p class="small-font-3">If you are looking for a new way to promote your business that won’t 
                     cost you more money, </p>
-            <h7 class="sub-title-3"><b>Custom Design designers</b></h7>
+            <h6 class="sub-title-3">Custom Design designers</h6>
                 <p class="small-font-3">If you are looking for a new way to promote your business that won’t 
                     cost you more money, </p>
-        </section>
+     </section>
         <section class="pointing">            
             <img src="images/pointing.png" alt="a person pointing">
         </section>
+    </main>
+<footer>        
 <section class="footer">
     <section class="logo-2">
         <div><img src="images/logo.png"></div>
@@ -127,5 +128,6 @@
         <button class="up-now-btn">Sign up Now</button>
     </section>
 </section>
+</footer>
 </body>
 </html>
