--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
             <h4 class="title-4">Marketers</h4>
                 <p class="small-font-3">Few would argue that, despite the advancements of feminism over the past three decades, 
                     women still face a double standard when it comes to their behavior.  </p>
-            <h6 class="sub-title-3">Accessory makers</h6>
+            <h6 class="sub-title-3"><b>Accessory makers</b></h6>
                 <p class="small-font-3">While most people enjoy casino gambling, sports betting, lottery 
                     and bingo playing for the fun</p>
-            <h6 class="sub-title-3">Alterationists</h6>
+            <h6 class="sub-title-3"><b>Alterationists</b></h6>
                 <p class="small-font-3">If you are looking for a new way to promote your business that won’t 
                     cost you more money, </p>
-            <h6 class="sub-title-3">Custom Design designers</h6>
+            <h6 class="sub-title-3"><b>Custom Design designers</b></h6>
                 <p class="small-font-3">If you are looking for a new way to promote your business that won’t 
                     cost you more money, </p>
      </section>
@@ -111,20 +111,24 @@
         <div><img src="images/logo.png"></div>
         <div><img src="images/logo-name.png"></div>
     </section>  
-    <section class="web-map">
-        <div>About Us</div>
-        <div>Blog</div>
-        <div>Contact</div>
-        <div>FAQ</div>
-    </section>  
-    <section class="web-map">
-        <div>Disclaimer</div>
-        <div>Financing</div>
-        <div>Privacy Policy</div>
-        <div>Terms of Service</div>
-    </section>
-    <section>
-        <div class="box"></div>
+    <nav class="web-map">
+        <ul>
+            <div>About Us</div>
+            <div>Blog</div>
+            <div>Contact</div>
+            <div>FAQ</div>
+        </ul>
+    </nav>  
+    <nav class="web-map">
+        <ul>
+            <div>Disclaimer</div>
+            <div>Financing</div>
+            <div>Privacy Policy</div>
+            <div>Terms of Service</div>
+        </ul>
+    </nav>
+    <section class="text-box-btn">
+        <input type="text">
         <button class="up-now-btn">Sign up Now</button>
     </section>
 </section>
